--- a/css/style.css
+++ b/css/style.css
@@ -114,12 +114,12 @@ body {
   .create-note__cancel:active, .create-note__cancel:focus {
     border: 1px solid #1F1F2E; }
 
-.create-note__title {
+.create-note__title, .create-note__tags {
   padding: 1rem;
   border: 1px solid #798494;
   border-radius: 4px;
   outline: none; }
-  .create-note__title:active, .create-note__title:focus {
+  .create-note__title:active, .create-note__title:focus, .create-note__tags:active, .create-note__tags:focus {
     border: 1px solid #1F1F2E; }
 
 .create-note__content {
