--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,16 +14,19 @@ $footer-height: 4rem;
     margin: 0;
     padding: 0;
 }
+
 *,
 *::before,
 *::after {
     box-sizing: inherit;
 }
+
 html {
     box-sizing: border-box;
     font-size: 62.5%; // 1 rem = 10px, 10px/16px = 62.5%
     font-family: 'Poppins', sans-serif;
 }
+
 body {
     min-height: 100vh;
     background-color: $color-1;
@@ -32,16 +35,22 @@ body {
     grid-template-rows: auto 1fr max-content;
     position: relative;
 }
+
 //HEADINGS
 .heading-1 {
     font-size: 3.5rem;
     line-height: 1;
     color: $color-5;
 }
+
 .heading-2 {
     font-size: 1.8rem;
     line-height: 1;
     color: $color-5;
+}
+
+.heading-3 {
+    font-size: 1.6rem;
 }
 
 //SEARCH
@@ -50,6 +59,7 @@ body {
         display: flex;
         justify-content: center;
     }
+
     &__input {
         border-radius: 15px;
         padding: .5rem;
@@ -57,13 +67,14 @@ body {
         transition: all .2s;
         border: 2px $color-3 solid;
         outline: none;
-        
+
         &:focus {
             width: 100%;
             border: 2px $color-5 solid;
         }
     }
 }
+
 @mixin btn {
     border: none;
     text-transform: uppercase;
@@ -74,17 +85,19 @@ body {
     transition: all .2s;
     cursor: pointer;
     outline: none;
-    
+
     &:hover,
     &:focus {
         background-color: $color-5;
         color: #fff;
     }
+
     &:active {
         transform: scale(1.05);
-        box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.3);
+        box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.3);
     }
 }
+
 @mixin roundBtn {
     background-size: cover;
     height: 2rem;
@@ -93,12 +106,14 @@ body {
     outline: none;
     border-radius: 100%;
     cursor: pointer;
-    transition: transform .2s;      
+    transition: transform .2s;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         transform: scale(1.1);
     }
 }
+
 //CREATE A NEW NOTE
 .create-note-btn {
     @include btn;
@@ -106,8 +121,9 @@ body {
     margin-bottom: 4rem;
     padding: 1.5rem 3.5rem;
 }
+
 //popup
-.create-note { 
+.create-note {
     &__background {
         position: absolute;
         background-color: rgba($color-2, 0.96);
@@ -116,6 +132,7 @@ body {
         width: 100%;
         height: 100%;
     }
+
     &__window {
         padding: 3rem;
         background-color: rgba($color-1, 0.90);
@@ -124,12 +141,13 @@ body {
         top: 40vh;
         left: 50vw;
         transform: translate(-50%, -50%);
-        box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.3);
+        box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.3);
         max-width: 200rem;
 
         display: flex;
         flex-direction: column;
     }
+
     &__remove {
         position: absolute;
         top: .6rem;
@@ -137,6 +155,7 @@ body {
         background: url(../icons/delete.png);
         @include roundBtn;
     }
+
     &__cancel {
         position: absolute;
         top: .6rem;
@@ -144,16 +163,20 @@ body {
         background: url(../icons/cancel.png);
         @include roundBtn;
     }
-    &__title, &__tags {
+
+    &__title,
+    &__tags {
         padding: 1rem;
         border: 1px solid $color-2;
         border-radius: 4px;
         outline: none;
 
-        &:active, &:focus {
+        &:active,
+        &:focus {
             border: 1px solid $color-5;
         }
     }
+
     &__content {
         margin-top: 1rem;
         resize: none;
@@ -161,15 +184,18 @@ body {
         border: 1px solid $color-2;
         border-radius: 4px;
         outline: none;
-        
-        &:active, &:focus {
+
+        &:active,
+        &:focus {
             border: 1px solid $color-5;
         }
     }
+
     &__input-container {
         margin: 1rem 0;
         font-size: 1.6rem;
     }
+
     &__confirm {
         @include btn;
         width: 7rem;
@@ -183,46 +209,64 @@ body {
 .notes {
     margin-bottom: 4rem;
     width: 100%;
-    
+
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min-content, 30rem));
     grid-gap: 2rem;
     justify-content: center;
-    
+
     &__note {
         border: 2px transparent solid;
         border-radius: 5px;
         padding: 1rem;
         background-color: $color-white;
         transition: all .2s;
-        
+
         cursor: pointer;
-        
-        &__content {
-            font-size: 1.4rem;
-        }
+
         &__date {
+            color: $color-4;
+            font-size: 1.3rem;
+            margin-bottom: 1rem;
+        }
+
+        &__content {
+            font-size: 1.6rem;
+            margin-bottom: 2rem;
+        }
+
+        &__notification {
+            color: $color-6;
+            font-size: 1.3rem;
+            font-weight: 700;
+        }
+
+        &__tags {
+
             color: $color-5;
             font-size: 1.3rem;
         }
+
         &:hover {
-            box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.02);
+            box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.02);
             border: 2px $color-2 solid;
         }
     }
-}   
+}
+
 //SECTIONS
 //HEADER
 .header {
     background-color: $color-3;
     padding: 2rem;
-    box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.3);
-    
+    box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.3);
+
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
+
 //MAIN
 .main {
     padding: 2rem;
@@ -230,6 +274,7 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
 //FOOTER
 .footer {
     padding: 2rem;
@@ -239,17 +284,20 @@ body {
     vertical-align: center;
     font-size: 1.4rem;
 }
+
 //FILTERED NOTES - MESSAGE
 .filtered-info {
     padding: 1rem 2rem;
     background-color: $color-6;
     border-radius: 100px;
     display: flex;
-    
+    margin-bottom: 2.6rem;
+
     &__remove-btn {
         background: url(../icons/cancel.png);
         @include roundBtn;
     }
+
     &__text {
         color: white;
         text-transform: uppercase;
@@ -257,6 +305,7 @@ body {
         font-size: 1.4rem;
     }
 }
+
 
 .hide {
     display: none; //disabled for testing
