--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -51,6 +51,7 @@ body {
 
 .heading-3 {
     font-size: 1.6rem;
+    margin-bottom: .8rem;
 }
 
 //SEARCH
@@ -106,11 +107,11 @@ body {
     outline: none;
     border-radius: 100%;
     cursor: pointer;
-    transition: transform .2s;
-
+    transition: all .2s;
+    backface-visibility: hidden;
     &:hover,
     &:focus {
-        transform: scale(1.1);
+        transform: scale(1.16)
     }
 }
 
@@ -152,7 +153,7 @@ body {
         position: absolute;
         top: .6rem;
         right: 3rem;
-        background: url(../icons/delete.png);
+        background: url(../icons/remove.png);
         @include roundBtn;
     }
 
